; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/gas/config/extr_tc-arm.c_encode_arm_immediate.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/gas/config/extr_tc-arm.c_encode_arm_immediate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FAIL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @encode_arm_immediate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @encode_arm_immediate(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %20, %1
  %7 = load i32, i32* %5, align 4
  %8 = icmp ult i32 %7, 32
  br i1 %8, label %9, label %23

9:                                                ; preds = %6
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @rotate_left(i32 %10, i32 %11)
  store i32 %12, i32* %4, align 4
  %13 = icmp ule i32 %12, 255
  br i1 %13, label %14, label %19

14:                                               ; preds = %9
  %15 = load i32, i32* %4, align 4
  %16 = load i32, i32* %5, align 4
  %17 = shl i32 %16, 7
  %18 = or i32 %15, %17
  store i32 %18, i32* %2, align 4
  br label %25

19:                                               ; preds = %9
  br label %20

20:                                               ; preds = %19
  %21 = load i32, i32* %5, align 4
  %22 = add i32 %21, 2
  store i32 %22, i32* %5, align 4
  br label %6

23:                                               ; preds = %6
  %24 = load i32, i32* @FAIL, align 4
  store i32 %24, i32* %2, align 4
  br label %25

25:                                               ; preds = %23, %14
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i32 @rotate_left(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
